made Modal responsive and fixed flickering issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,6 @@ blockquote { font-size: 1rem; font-style: normal; margin-left: 2rem; }
 
 .navbar a, button { transition: background .2s ease-in-out; transition: color .2s ease-in-out; transition: background .2s ease-in-out; }
 .navbar a:hover, button:hover { background-color: rgba(255, 255, 255, 0.1); }
-.navbar a:active, button:active { background-color: white; }
+.navbar a:active, button:active { background-color: rgba(255, 255, 255, 0.25); }
 
 .bg-lighten { background-color: rgba(255, 255, 255, 0.1); }
